<resources>
    <string name="app_name">Auto Responder</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="speed">Speed:</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_general_response">General Response</string>
    <string name="oneHour_option">60 Minutes</string>
    <string name="custom_option">Custom:</string>
    <string name="twentyMinutes_option">20 Minutes</string>
    <string name="fiveMinutes_option">5 Minutes</string>
    <string name="generalResponse_title">General Response:</string>
    <string name="universalResponse_title">Universal Reply</string>
    <string name="timingDelay_title">Timing Delay:</string>
    <string name="title_activity_contacts_list">Contacts List</string>
    <string name="title_activity_single_contact">Contact Information:</string>
    <string name="title_activity_add_contact">Add Contact From Address Book</string>
    <string name="title_activity_set_contact_group">Set Contacts Group</string>
    <string name="title_activity_manage_groups">Manage Groups</string>
    <string name="title_activity_new_group">Create New Group</string>
    <string name="title_activity_single_group">Single Group</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="large_setting_text">Medium Text</string>
    <string name="small_setting_text">Small Text</string>

    <!-- Settings -->
    <string name="defaultGroup_location_toggle">Default Contact Location Setting</string>
    <string name="defaultGroup_location_toggle_descr">Specify the default location permission</string>
    <string name="defaultGroup_activity_toggle">Default Contact Activity Setting</string>
    <string name="defaultGroup_activity_toggle_descr">Specify the default activity permission</string>
    <string name="drivingDetection_toggle">Driving Detection</string>
    <string name="drivingDetection_toggle_descr">enables/disables responder based on your speed</string>
    <string name="drivingDetection_interval">Driving Detection Interval</string>
    <string name="drivingDetection_interval_descr_short">Choose how often Driving Detection checks your speed</string>
    <string name="drivingDetection_interval_descr_long">Choose how long Driving Detection will wait before checking your speed. \nNote: a shorter interval increases accuracy at the cost of battery life</string>
    <string name="setting_timeLimit">Time Limit</string>
    <string name="setting_timeLimit_descr">Choose how long the responder will be active</string>
    <string name="setting_timeDelay">Time Delay</string>
    <string name="setting_timeDelay_descr">Choose how long the responder will wait before replying to the same contact</string>
    <string name="defaultGroup_Response">Default Contact Response</string>
    <string name="title_activity_time_delay">Time Delay</string>
    <string name="title_activity_default_contact_response">Default Contact Response</string>
    <string name="title_activity_default_contact_response_descr">Response for contacts with no individual settings</string>
    <string name="title_activity_response_log_list">ResponseLogList</string>
    <string name="title_activity_location_status">LocationStatusActivity</string>
    <string name="title_activity_time_limit">Time Limit</string>
    <string name="title_activity_parental_controls_set_up">Parental Controls</string>
    <string name="title_activity_driving_detection_interval">Driving Detection Interval</string>
    <string name="title_activity_parental_controls_password">Access to Parental Controls</string>
    <string name="title_activity_parental_controls_instructions">About Parental Controls</string>
    <string name="title_activity_daily_notice_setup">DailyNoticeSetup</string>
    <string name="description_daily_notice_setup">Choose a time that Auto Responder will send you a
        message to verify parental controls are still running. If you stop receiving this
        message, then something was done to the device to force parental controls to
        shutdown. You will have to manually turn parental controls back on.
    </string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_my_fragment_creator">MyFragmentCreator</string>
</resources>
