<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seniordesign.autoresponder.Interface.Settings.TimeDelay">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/setting_timeDelay_descr"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveMinutes_option"
            android:id="@+id/radioButton"
            android:layout_gravity="left|center_horizontal"
            android:checked="false"
            android:onClick="radioButtonDelaySet" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyMinutes_option"
            android:id="@+id/radioButton2"
            android:layout_gravity="left|center_horizontal"
            android:checked="false"
            android:onClick="radioButtonDelaySet" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneHour_option"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:onClick="radioButtonDelaySet"
            android:layout_gravity="left" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_option"
            android:id="@+id/radioButton4"
            android:checked="false"
            android:onClick="radioButtonDelaySet"
            android:layout_gravity="left" />
    </RadioGroup>

</RelativeLayout>
