<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.seniordesign.autoresponder.GeneralResponse">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generalResponse_title"
        android:id="@+id/generalResponse_textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/generalResponse_text"
        android:layout_below="@+id/generalResponse_textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:maxLength="144"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timingDelay_title"
        android:id="@+id/timingDelay_textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timingDelay_radioGroup"
        android:layout_below="@+id/timingDelay_textView"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveMinutes_option"
            android:id="@+id/fiveMin_radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="radioButtonDelaySet"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twentyMinutes_option"
            android:id="@+id/twentyMin_radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="radioButtonDelaySet"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneHour_option"
            android:id="@+id/oneHour_radioButton"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="radioButtonDelaySet"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_option"
            android:id="@+id/custom_option"
            android:checked="false"
            android:onClick="radioButtonDelaySet"
            android:layout_alignRight="@+id/generalResponse_textView"
            android:layout_alignEnd="@+id/generalResponse_textView" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Text"
        android:id="@+id/setTextButton"
        android:layout_below="@+id/generalResponse_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"/>

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/customMin"
        android:numeric="integer"
        android:maxLength="3"
        android:longClickable="false"
        android:textAlignment="center"
        android:layout_alignBottom="@+id/timingDelay_radioGroup"
        android:layout_toRightOf="@+id/setTextButton"
        android:layout_alignRight="@+id/generalResponse_textView"
        android:layout_alignEnd="@+id/generalResponse_textView"
        android:autoText="false"
        android:password="false"
        android:hint="15" />


</RelativeLayout>
